--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
+
 # Yarn Integrity file
 .yarn-integrity
 
@@ -102,3 +103,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Svelte build
+public/build/
